objects/ACLS_Missing_Information__c.object
<CustomObject>
    <fields>
        <fullName>ACLS_Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consent</fullName>
                </value>
                <value>
                    <fullName>Patient Information</fullName>
                </value>
                <value>
                    <fullName>HCP/HCO Information</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>Payer Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Entity_Link__c</fullName>
        <description>Formula Field to render a URL to the record directly.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; IF(NOT(ISBLANK( ACLS_Object_Record_Id__c )), ACLS_Object_Record_Id__c ,  ACLS_Source_Record_Id__c  ) ,   ACLS_Object_Record_Id__c   ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Missing_Information_Field_Labels__c</fullName>
        <description>Stores the field labels which are missing the information</description>
        <label>Missing Information Field Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Missing_Information_Fields__c</fullName>
        <description>Capture Missing information related to HCP, Payers, Patient, Caregiver.</description>
        <label>Missing Information</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ACLS_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Consent</fullName>
                </value>
                <value>
                    <fullName>Patient Consent</fullName>
                </value>
                <value>
                    <fullName>Patient Phone Number</fullName>
                </value>
                <value>
                    <fullName>Patient Email Address</fullName>
                </value>
                <value>
                    <fullName>Patient Address</fullName>
                </value>
                <value>
                    <fullName>Date of Birth</fullName>
                </value>
                <value>
                    <fullName>Caregiver Phone Number</fullName>
                </value>
                <value>
                    <fullName>Primary Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Secondary Diagnosis</fullName>
                </value>
                <value>
                    <fullName>NPI</fullName>
                </value>
                <value>
                    <fullName>Tax ID Number</fullName>
                </value>
                <value>
                    <fullName>State License Number</fullName>
                </value>
                <value>
                    <fullName>Site of Care</fullName>
                </value>
                <value>
                    <fullName>Provider Address</fullName>
                </value>
                <value>
                    <fullName>Provider Phone</fullName>
                </value>
                <value>
                    <fullName>Provider Fax</fullName>
                </value>
                <value>
                    <fullName>Provider Email</fullName>
                </value>
                <value>
                    <fullName>Dosage</fullName>
                </value>
                <value>
                    <fullName>Day Supply</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Prescription Date</fullName>
                </value>
                <value>
                    <fullName>Prescription Signature</fullName>
                </value>
                <value>
                    <fullName>Product Name</fullName>
                </value>
                <value>
                    <fullName>Payer Policy Number</fullName>
                </value>
                <value>
                    <fullName>Policy Holder Date of Birth</fullName>
                </value>
                <value>
                    <fullName>CPT Code(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Object_Name__c</fullName>
        <description>Object API Name on which the missing information is present</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Object_Record_Id__c</fullName>
        <description>Record ID for the object on which missing information is present</description>
        <label>Object Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Object_Record_Type_Name__c</fullName>
        <description>Record Type API Name</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Missing Informations</relationshipLabel>
        <relationshipName>Missing_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Source_Record_Id__c</fullName>
        <description>Field to Capture Id of the Source Record on which Missing information is evaluated</description>
        <label>Source Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Status__c</fullName>
        <description>This field captures the status of the Missing Information record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Missing Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Missing Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missing Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>